--- a/wp-content/themes/fipradotcom/sass/layout/_full-width-block.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_full-width-block.scss
@@ -1,38 +1,46 @@
 .full-width-block-container {
 
   &.with-content-bar {
-    @include media($media__medium) { padding: $v-rhythm * 8 0; }
-    @include media($media__xlarge) { padding: $v-rhythm * 14 0; }
+    @include media($media__medium) { padding: $v-rhythm * 7 0; }
+    @include media($media__xlarge) { padding: $v-rhythm * 11 0; }
 
     &.content-bar-top {
-      @include media($media__medium) { padding: 0 0 $v-rhythm * 16; }
-      @include media($media__xlarge) { padding: 0 0 $v-rhythm * 28; }
+      @include media($media__medium) { padding: 0 0 $v-rhythm * 14; }
+      @include media($media__xlarge) { padding: 0 0 $v-rhythm * 22; }
     }
 
     &.content-bar-bottom {
-      @include media($media__medium) { padding: $v-rhythm * 16 0 0; }
-      @include media($media__xlarge) { padding: $v-rhythm * 28 0 0; }
+      @include media($media__medium) { padding: $v-rhythm * 14 0 0; }
+      @include media($media__xlarge) { padding: $v-rhythm * 22 0 0; }
     }
+  }
+
+  &.flex {
+    @include media($media__medium) { padding-top: 0; padding-right: 0; padding-left: 0; padding-bottom: 0; }
   }
 }
 
 #hero {
   .full-width-block-content-container {
-    @include media($media__medium) { padding-top: $v-rhythm * 8; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 8; }
-    @include media($media__xlarge) { padding-top: $v-rhythm * 14; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 14; }
+    @include media($media__medium) { padding-top: $v-rhythm * 7; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 7; }
+    @include media($media__xlarge) { padding-top: $v-rhythm * 11; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 11; }
 
     &.top {
-      @include media($media__medium) { padding-top: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 13; }
-      @include media($media__xlarge) { padding-top: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 25; }
+      @include media($media__medium) { padding-top: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 11; }
+      @include media($media__xlarge) { padding-top: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 19; }
     }
 
     &.bottom {
-      @include media($media__medium) { padding-bottom: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-top: $v-rhythm * 14; }
-      @include media($media__xlarge) { padding-bottom: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-top: $v-rhythm * 25; }
+      @include media($media__medium) { padding-bottom: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-top: $v-rhythm * 11; }
+      @include media($media__xlarge) { padding-bottom: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-top: $v-rhythm * 19; }
     }
 
     &.content-bar {
       @include media($media__medium) { padding-top: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 3; }
+    }
+
+    &.flex {
+      @include media($media__medium) { padding-top: 0; padding-right: 0; padding-left: 0; padding-bottom: 0; }
     }
 
     &.page-width { @extend .content-area; }
@@ -42,6 +50,12 @@
 .full-width-block-content-container {
   height:100%;
   padding-top: $v-rhythm * 3; padding-right: 0; padding-left: 0; padding-bottom: $v-rhythm * 3;
+}
+
+.full-width-block-container, .full-width-block-content-container {
+
+  color:darken($color__fipra-lighter-gray, 46%);
+  h1, h2, h3, h4, h5, h6 { color:$color_soft-black !important; }
 
   &.blue {
     background-color: $color__fipra-blue;
@@ -99,7 +113,7 @@
   }
 
   &.blue, &.dark-grey, &.grey, &.turquoise, &.violet {
-    h1, h2, h3, h4, h5, h6 { color:white; }
+    h1, h2, h3, h4, h5, h6 { color:white !important; }
     a { color: white; &:hover { color:darken(white, 10%);} }
     .btn { @extend .btn-white; }
     li.active a { background:rgba(white, 0.1); color:white !important; }
