--- a/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
+++ b/wp-content/themes/fipradotcom/sass/variables-site/_colors.scss
@@ -1,7 +1,7 @@
 //Fipra colours
 $color__fipra-blue: #00257f;
 $color__fipra-soft-blue: desaturate(lighten($color__fipra-blue, 25%), 60%);
-$color__fipra-blue-gray: #5F697F;
+$color__fipra-blue-gray: saturate(#5F697F, 3%);
 $color__fipra-periwinkle: #ccd3e5;
 $color__fipra-violet: #6f5ce5;
 $color__fipra-turquoise: #14b1cc;
@@ -9,7 +9,7 @@ $color__fipra-gold: #e5c75c;
 $color__fipra-lighter-gray: #eceef2;
 $color__fipra-light-gray: #dde0e1;
 $color__fipra-mid-gray: lighten(#d1d5d9, 5%);
-$color__fipra-dark-gray: darken($color__fipra-blue-gray, 12%);
+$color__fipra-dark-gray: darken(saturate($color__fipra-blue-gray, 5%), 12%);
 $color__fipra-orange: #DE8A56;
 $color__fipra-light-orange: #fce5c3;
 
