--- a/wp-content/themes/fipradotcom/sass/pages/_expertise.scss
+++ b/wp-content/themes/fipradotcom/sass/pages/_expertise.scss
@@ -86,3 +86,11 @@
 
   .owl-page { span { background:$color__fipra-blue !important; } }
 }
+
+// Expertise landing page
+.areas-of-expertise-block .full-width-block-content {
+  text-align: left !important;
+}
+.public-affairs-services-block .full-width-block-content {
+  text-align: left !important;
+}
