--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -33,11 +33,12 @@
       @include media($media__medium) { @include span-columns(2); padding:0; }
 
       h1.site-title {
+        line-height: 1rem;
         margin-bottom:0;
-        img { width:50px; height:50px; }
+        img { width:40px; height:40px; }
         @include media($media__medium) {
-          margin:$v-rhythm * 1.5 0 0 0;
-          img { width:72px; height:72px; }
+          margin:$v-rhythm * 1.3 0 0 0;
+          img { width:64px; height:64px; }
         }
       }
     }
@@ -89,11 +90,9 @@
   width:auto;
   margin-top:8px;
   margin-right:5px;
-  font-family: $font__sans;
   input[type=text] {
     padding-right:40px;
-    width:150px;
-    font-family: $font__sans;
+    width:200px;
   }
   .button-search {
     @include button-reset();
