--- a/wp-content/themes/fipradotcom/sass/layout/_layout.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_layout.scss
@@ -7,6 +7,7 @@
 @import "page-header";
 @import "full-width-block";
 @import "global-network-menu";
+@import "search";
 
 #content-container {
   @include clearfix;
