Header and top-level nav minor updates

--- a/wp-content/themes/fipradotcom/sass/layout/_global-network-menu.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_global-network-menu.scss
@@ -166,6 +166,7 @@
       z-index: 99;
 //      background-color:$color__fipra-blue-gray;
       background:url('img/global-network-megamenu-bg.png') top right no-repeat $color__fipra-blue-gray;
+      background-size:330px 230px;
 //      @include linear-gradient($color__fipra-blue-gray 60%, darken($color__fipra-blue-gray, 3%) 100%);
       .country-tag {
         float:left;
