--- a/wp-content/themes/fipradotcom/sass/layout/_header.scss
+++ b/wp-content/themes/fipradotcom/sass/layout/_header.scss
@@ -70,7 +70,10 @@
 //        @include linear-gradient($color__fipra-blue 60%, darken($color__fipra-blue, 7%) 100%);
         &.reverse-background { @include linear-gradient(darken($color__fipra-blue-gray, 15%) 0%, $color__fipra-blue-gray 25%);}
         &:hover {
-          padding-top:$v-rhythm * 2;
+          padding-top:$v-rhythm * 1.5;
+        }
+        &:focus {
+          outline:0;
         }
       }
 
