--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -26,7 +26,7 @@
         display: block;
         text-decoration: none;
         padding: $v-rhythm * 1.25 0 $v-rhythm * 0.75;
-        color: $color__fipra-blue-gray;
+        color: $color__fipra-dark-gray;
         font-weight: $font__bold;
       }
       &.current-menu-item > a,
@@ -51,7 +51,7 @@
       left: -999em;
       z-index: 99999;
       margin-top: -4px;
-      width: 200px;
+      width: 225px;
 
 
       li {
