--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -166,8 +166,8 @@ ul.anchor-links-list {
   margin-bottom:$v-rhythm * 2;
   &.no-margin { margin:0; }
   li {
-    margin-bottom:0 !important;
     position:relative;
+    margin-bottom:0 !important;
 
     &.hide-s { @include media(max-width $media__medium) { display:none; } }
     &.hide-m { @include media($media__medium) { display:none; } }
@@ -189,10 +189,49 @@ ul.anchor-links-list {
       &:not(:first-child) { margin-left: em(12px); }
       a {
         display:inline-block;
-        padding:$v-rhythm * 0.5 em(6px);
-        border-bottom:3px solid transparent;
-        &:hover { border-bottom:3px solid $color__fipra-blue-gray; }
+        padding:$v-rhythm * 0.5 em(12px);
+        border-bottom:4px solid transparent;
+        &:hover { border-bottom:4px solid $color__fipra-blue-gray; }
       }
     }
+
+    a.active {
+      background-color: darken($color__fipra-dark-gray, 5%);
+      font-weight: $font__bold;
+    }
   }
+}
+
+.filter-list-container {
+  position:relative;
+
+  .filter-list-title {
+    margin:0; cursor:pointer;
+    i { position:absolute; right:0; top:0; }
+    @include media($media__medium) { margin:0; i { display:none; } }
+  }
+  ul.filter-list {
+    @extend .anchor-links-list;
+    li {
+      margin-left:0 !important;
+      border-top:0 !important;
+      float:left;
+
+      .filter {
+        display:inline-block !important;
+        height: auto;
+        margin: $v-rhythm * 0.5 em(8px) $v-rhythm * 0.5 0;
+        margin-right: em(8px);
+        display: block; padding: $v-rhythm; line-height: $v-rhythm * 1.5; border: 1px solid rgba(white, 0.1);
+        &:hover { border: 1px solid rgba(white, 0.4); }
+
+        &.active {
+          background-color:white;
+          color:$color__fipra-blue-gray;
+        }
+      }
+    }
+
+  }
+
 }
